Fix text align for order summery table

--- a/mails/themes/modern_mjml/assets/rtl.css
+++ b/mails/themes/modern_mjml/assets/rtl.css
@@ -20,3 +20,8 @@ div {
     margin-right: 0 !important;
     margin-left: 10px;
 }
+
+.order_summary td:first-child,
+.conf_body td:first-child > table td {
+    text-align: left !important;
+}
